now service works need to write middleware and beautiful error handling and wrapping (ya sigma) and other services

--- a/services/sso/cmd/app/config.env
+++ b/services/sso/cmd/app/config.env
@@ -1,6 +1,5 @@
 DB_USER=postgres
 DB_PASSWORD=mypass
-DB_NAME=task_manager
-DB_SSL_MODE=disable 
-JWT_SECRET=my_secret
+DB_NAME=prod_consultant_db
+DB_SSL_MODE=disable
 PORT=8080
