done logging and middleware next step adding vault for .pem keys and making docker img of db to easy testing requests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "dbname",
         "jmoiron",
+        "kitgrpc",
+        "mypass",
         "sqlx",
         "sslmode"
     ]
