parallel test fixes now tests can go in parallel mode cuz now im using transactions in tests some layout changes made docker image of main bd and done some temporary "migration" in NewDb func fixed errors with rows in createuser func made grateful stop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "dbname",
+        "dbtest",
         "gengrpc",
         "jmoiron",
         "kitgrpc",
+        "Msgf",
         "mypass",
         "sqlx",
         "sslmode"
