--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,10 @@
         "kitgrpc",
         "Msgf",
         "mypass",
+        "Queryx",
+        "Rowx",
         "sqlx",
-        "sslmode"
+        "sslmode",
+        "Wrapf"
     ]
 }
