made gateway service by far without websocket but reg/log req routs to auth service by grpc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "authpb",
         "dbname",
         "dbtest",
         "gengrpc",
         "jmoiron",
         "kitgrpc",
+        "kithttp",
         "Msgf",
         "mypass",
         "Queryx",
