huge updates: full containerization some refactoring tests uncompleted yet changes actions cfg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "kithttp",
         "Msgf",
         "mypass",
+        "privateauth",
+        "publicauth",
         "Queryx",
         "Rowx",
         "sqlx",
