--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: test
-      run: docker compose -f docker-compose.test.yml up -d
+      run: docker compose -f docker-compose.test.yml up
