made grateful stop in gateway http and pretty logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "authpb",
         "dbname",
         "dbtest",
+        "finalizer",
         "gengrpc",
         "jmoiron",
         "kitgrpc",
